--- a/index.html
+++ b/index.html
@@ -14,14 +14,34 @@ https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
     <!-- Responsive Navbar -->
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-20">
         <h1 class="text-2xl">Greenden</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-            class="size-6 md:hidden" width="24" height="24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
-
-        <ul class="flex gap-5 text-gray-600 hidden md:flex">
+        <div id="miniNavbar" class="flex justify-center items-center gap-5">
+            <div class="icon cursor-pointer">
+                <svg id="menuIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6 md:hidden" width="24" height="24">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </div>
+            <ul class="flex gap-5 text-gray-600 hidden md:flex">
+                <li>
+                    <a class="hover:underline hover:text-black" href="#">Home</a>
+                </li>
+                <li>
+                    <a class="hover:underline  hover:text-black" href="products.html">Products</a>
+                </li>
+                <li>
+                    <a href="contact.html" class="hover:underline  hover:text-black">Contact</a>
+                </li>
+            </ul>
+    </nav>
+    <!-- Side Navbar -->
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 right-0 transition-all duration-1000"
+        style="width: 100%; height:100vh; right: -100%; ">
+        <div class="relative"><img id="backIcon" src="images/right-arrow.png" class="w-14 absolute right-0 px-2 py-2">
+        </div>
+        <ul class="flex flex-col items-center gap-8 text-gray-600 py-4">
             <li>
-                <a class="hover:underline hover:text-black" href="#">Home</a>
+                <a class="hover:underline hover:text-black" href="index.html">Home</a>
             </li>
             <li>
                 <a class="hover:underline  hover:text-black" href="products.html">Products</a>
@@ -30,7 +50,7 @@ https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
                 <a href="contact.html" class="hover:underline  hover:text-black">Contact</a>
             </li>
         </ul>
-    </nav>
+    </section>
     <!-- Header Section -->
     <Header class="bg-green-100 p-5 flex justify-center">
         <div>
@@ -182,4 +202,5 @@ https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
             <p>&copy; 2025 Greenday.com</p>
         </div>
     </section>
+    <script src="index.js"></script>
 </body>
